# early-bird

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-early-bird  bazel-out  bazel-testlogs  early-bird.code-workspace  go.mod
.claude/rules/: common-unit-tests.md  grafana-dashboards.md  interface-required.md  observability-metrics.md
bazel/: BUILD.bazel  oci.bzl
com/tm/: BUILD.bazel
com/tm/common/go/result/: BUILD.bazel  result.go  result_test.go
com/tm/common/go/result/test/: BUILD.bazel  result_test.go
com/tm/common/java/config/: BUILD.bazel  Config.java  MapConfig.java
com/tm/common/java/config/test/: BUILD.bazel  ConfigTest.java
com/tm/common/java/exception/: BUILD.bazel  HandlerException.java
com/tm/common/java/exception/test/: BUILD.bazel  HandlerExceptionTest.java
com/tm/common/java/kafka/: BUILD.bazel  ClaimEvent.java  ClaimEventTest.java  ClaimProducer.java  ClaimProducerTest.java  KafkaClients.java  VertxClaimProducer.java
com/tm/common/java/kafka/test/: BUILD.bazel  ClaimEventTest.java  ClaimProducerTest.java  KafkaClientsTest.java
com/tm/common/java/metric/: BUILD.bazel  Metrics.java  MetricsServer.java  MetricsTest.java  MicrometerMetrics.java  PrometheusMetricsServer.java
com/tm/common/java/metric/test/: BUILD.bazel  MetricsTest.java  PrometheusMetricsServerTest.java
com/tm/common/java/pg/: BUILD.bazel  ClaimStore.java  ClaimStoreTest.java  PgClaimStore.java  PgPool.java
com/tm/common/java/pg/test/: BUILD.bazel  ClaimStoreTest.java
com/tm/common/java/redis/: BUILD.bazel  ClaimGate.java  ClaimGateTest.java  PgHealth.java  VertxClaimGate.java  VertxPgHealth.java
com/tm/common/java/redis/test/: BUILD.bazel  ClaimGateTest.java  PgHealthTest.java
com/tm/infra/: README.md  docker-compose.yaml  prometheus.yml
com/tm/infra/grafana/: README.md
com/tm/infra/grafana/dashboards/: common-pg.json  loadtest-pg.json  loadtest-redis-counter.json  loadtest-server.json  manager.json  server.json
com/tm/infra/grafana/provisioning/dashboards/: dashboards.yml
com/tm/infra/migrations/: 0001_init.sql
com/tm/loadtest/: README.md
com/tm/loadtest/lt/: BUILD.bazel  lt.go
com/tm/loadtest/pg/: BUILD.bazel  main.go  result.md
com/tm/loadtest/redis-counter/: BUILD.bazel  main.go  result.md
com/tm/loadtest/server/: BUILD.bazel  main.go
com/tm/services/client/cmd/: BUILD.bazel  main.go
com/tm/services/manager/: BUILD.bazel  ClaimProcessor.java  ConsumerRunner.java  Main.java  ManagerVerticle.java  PgHealthProbe.java
com/tm/services/manager/config/: BUILD.bazel  ManagerConfig.java
com/tm/services/manager/dao/: BUILD.bazel  BookingDao.java  JdbcBookingDao.java
com/tm/services/manager/dao/test/: BUILD.bazel  BookingDaoTest.java
com/tm/services/manager/di/: ManagerBindings.java  ManagerComponent.java  ManagerModule.java
com/tm/services/manager/handler/: BUILD.bazel  ClaimHandler.java  ClaimHandlerImpl.java
com/tm/services/manager/handler/test/: BUILD.bazel  ClaimHandlerTest.java
com/tm/services/manager/test/: BUILD.bazel  PgHealthProbeTest.java
com/tm/services/server/: BUILD.bazel  BookingVerticle.java  Main.java
com/tm/services/server/config/: BUILD.bazel  ServerConfig.java
com/tm/services/server/dao/: BUILD.bazel  JdbcOpportunityDao.java  JdbcReconciliationDao.java  Opportunity.java  OpportunityDao.java  ReconciliationDao.java
com/tm/services/server/dao/test/: BUILD.bazel  JdbcReconciliationDaoTest.java  OpportunityDaoTest.java
com/tm/services/server/di/: ServerBindings.java  ServerComponent.java  ServerModule.java
com/tm/services/server/handler/: BUILD.bazel  ClaimHandler.java  ClaimHandlerImpl.java  OpportunityHandler.java  OpportunityHandlerImpl.java
com/tm/services/server/handler/test/: BUILD.bazel  ClaimHandlerImplTest.java  OpportunityHandlerImplTest.java
com/tm/services/server/redis/: BUILD.bazel  RedisWarmupService.java  RedisWarmupServiceImpl.java
com/tm/services/server/redis/test/: BUILD.bazel  RedisWarmupServiceImplTest.java
docs/01-system-design/: system-design.md
docs/02-techstack/: techstack.md
docs/03-technical-highlights/: technical-highlights.md
docs/04-api/: api.md  early-bird.postman_collection.json
docs/05-loadtest/: fullflow.md  loadtest.md  pg.md  redis.md
docs/05-loadtest/fullflow/: fullflow.md
docs/05-loadtest/fullflow/correctness/gate/: gate.md
docs/05-loadtest/fullflow/correctness/idempotent/: idempotent.md
docs/05-loadtest/fullflow/ramp/contended/: contended.md
docs/05-loadtest/fullflow/ramp/diverse/: diverse.md
docs/05-loadtest/fullflow/ramp/realistic/: realistic.md
docs/06-test-case/: test-case.md
tools/dagger/: BUILD.bazel
