load("@rules_java//java:defs.bzl", "java_binary")
load("//bazel:oci.bzl", "java_service_image")

# Root lib: entrypoint + poll loop + Dagger wiring (annotation processing via
# //tools/dagger generates DaggerManagerComponent).
java_library(
    name = "manager_lib",
    srcs = [
        "ConsumerRunner.java",
        "Main.java",
        "ManagerVerticle.java",
        "PgHealthProbe.java",
        "di/ManagerBindings.java",
        "di/ManagerComponent.java",
        "di/ManagerModule.java",
    ],
    visibility = ["//com/tm/services/manager:__subpackages__"],
    deps = [
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/metric",
        "//com/tm/common/java/pg",
        "//com/tm/common/java/redis",
        "//com/tm/services/manager/config",
        "//com/tm/services/manager/dao",
        "//com/tm/services/manager/handler",
        "//tools/dagger",
        "@maven//:io_github_resilience4j_resilience4j_circuitbreaker",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_micrometer_micrometer_registry_prometheus",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_redis_client",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_postgresql_postgresql",
    ],
)

java_binary(
    name = "manager",
    main_class = "com.tm.services.manager.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [":manager_lib"],
)

# Builds :manager_image and :manager_load (distroless/java).
java_service_image(
    name = "manager",
    deploy_jar = ":manager_deploy.jar",
    repo_tag = "early-bird/manager:latest",
)
