load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//bazel:oci.bzl", "java_service_image")

# Root lib: BookingVerticle + entrypoint + Dagger wiring (annotation processing
# via //tools/dagger generates DaggerServerComponent).
java_library(
    name = "server_lib",
    srcs = [
        "BookingVerticle.java",
        "Main.java",
        "di/ServerBindings.java",
        "di/ServerComponent.java",
        "di/ServerModule.java",
    ],
    deps = [
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/metric",
        "//com/tm/common/java/redis",
        "//com/tm/services/server/config",
        "//com/tm/services/server/dao",
        "//com/tm/services/server/handler",
        "//com/tm/services/server/redis",
        "//tools/dagger",
        "@maven//:io_github_resilience4j_resilience4j_circuitbreaker",
        "@maven//:io_github_resilience4j_resilience4j_ratelimiter",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_micrometer_micrometer_registry_prometheus",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_kafka_client",
        "@maven//:io_vertx_vertx_redis_client",
        "@maven//:io_vertx_vertx_web",
        "@maven//:org_postgresql_postgresql",
    ],
)

java_binary(
    name = "server",
    main_class = "com.tm.services.server.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [":server_lib"],
)

# Builds :server_image and :server_load (distroless/java).
java_service_image(
    name = "server",
    deploy_jar = ":server_deploy.jar",
    repo_tag = "early-bird/server:latest",
)
