load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "kafka",
    srcs = [
        "ClaimEvent.java",
        "ClaimProducer.java",
    ],
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_apache_kafka_kafka_clients"],
)

java_test(
    name = "ClaimEventTest",
    srcs = ["ClaimEventTest.java"],
    test_class = "com.tm.common.kafka.ClaimEventTest",
    deps = [
        ":kafka",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "ClaimProducerTest",
    srcs = ["ClaimProducerTest.java"],
    test_class = "com.tm.common.kafka.ClaimProducerTest",
    deps = [
        ":kafka",
        "@maven//:junit_junit",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)
