load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "kafka",
    srcs = [
        "ClaimEvent.java",
        "ClaimProducer.java",
        "KafkaClients.java",
        "VertxClaimProducer.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tools/dagger",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_kafka_client",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)
