load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "metric",
    srcs = [
        "Metrics.java",
        "MicrometerMetrics.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tools/dagger",
        "@maven//:io_micrometer_micrometer_core",
    ],
)
