load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "pg",
    srcs = ["ClaimStore.java"],
    visibility = ["//visibility:public"],
    runtime_deps = ["@maven//:org_postgresql_postgresql"],
)

java_test(
    name = "ClaimStoreTest",
    srcs = ["ClaimStoreTest.java"],
    test_class = "com.tm.common.pg.ClaimStoreTest",
    deps = [
        ":pg",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
