load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "pg",
    srcs = [
        "ClaimStore.java",
        "PgClaimStore.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//com/tm/common/java/kafka",
        "//tools/dagger",
    ],
    runtime_deps = ["@maven//:org_postgresql_postgresql"],
)
