load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "redis",
    srcs = [
        "ClaimGate.java",
        "PgHealth.java",
        "VertxClaimGate.java",
        "VertxPgHealth.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tools/dagger",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_redis_client",
    ],
)
