load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "dao",
    srcs = [
        "BookingDao.java",
        "JdbcBookingDao.java",
    ],
    visibility = ["//com/tm/services/manager:__subpackages__"],
    deps = [
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/metric",
        "//com/tm/common/java/pg",
        "//tools/dagger",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
    ],
)
