load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "PgHealthProbeTest",
    srcs = ["PgHealthProbeTest.java"],
    test_class = "com.tm.services.manager.PgHealthProbeTest",
    deps = [
        "//com/tm/services/manager:manager_lib",
        "//com/tm/services/manager/dao",
        "@maven//:io_github_resilience4j_resilience4j_circuitbreaker",
        "@maven//:io_vertx_vertx_core",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
