load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "dao",
    srcs = [
        "JdbcOpportunityDao.java",
        "JdbcReconciliationDao.java",
        "Opportunity.java",
        "OpportunityDao.java",
        "ReconciliationDao.java",
    ],
    visibility = ["//com/tm/services/server:__subpackages__"],
    deps = [
        "//com/tm/common/java/metric",
        "//tools/dagger",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_redis_client",
    ],
    runtime_deps = ["@maven//:org_postgresql_postgresql"],
)
