load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "redis",
    srcs = [
        "RedisWarmupService.java",
        "RedisWarmupServiceImpl.java",
    ],
    visibility = ["//com/tm/services/server:__subpackages__"],
    deps = [
        "//com/tm/common/java/metric",
        "//com/tm/common/java/redis",
        "//com/tm/services/server/dao",
        "//tools/dagger",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_redis_client",
    ],
)
