load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "MetricsTest",
    srcs = ["MetricsTest.java"],
    test_class = "com.tm.common.metric.MetricsTest",
    deps = [
        "//com/tm/common/java/metric",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "PrometheusMetricsServerTest",
    srcs = ["PrometheusMetricsServerTest.java"],
    test_class = "com.tm.common.metric.PrometheusMetricsServerTest",
    deps = [
        "//com/tm/common/java/metric",
        "@maven//:io_micrometer_micrometer_registry_prometheus",
        "@maven//:io_vertx_vertx_core",
        "@maven//:junit_junit",
    ],
)
