load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "ClaimStoreTest",
    srcs = ["ClaimStoreTest.java"],
    test_class = "com.tm.common.pg.ClaimStoreTest",
    deps = [
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/pg",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
