load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "BookingDaoTest",
    srcs = ["BookingDaoTest.java"],
    test_class = "com.tm.services.manager.dao.BookingDaoTest",
    deps = [
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/metric",
        "//com/tm/common/java/pg",
        "//com/tm/services/manager/dao",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
