load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "ClaimHandlerTest",
    srcs = ["ClaimHandlerTest.java"],
    test_class = "com.tm.services.manager.handler.ClaimHandlerTest",
    deps = [
        "//com/tm/common/java/exception",
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/metric",
        "//com/tm/common/java/pg",
        "//com/tm/common/java/redis",
        "//com/tm/services/manager/dao",
        "//com/tm/services/manager/handler",
        "@maven//:io_github_resilience4j_resilience4j_circuitbreaker",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
