load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "OpportunityDaoTest",
    srcs = ["OpportunityDaoTest.java"],
    test_class = "com.tm.services.server.dao.OpportunityDaoTest",
    deps = [
        "//com/tm/common/java/metric",
        "//com/tm/services/server/dao",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_redis_client",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)

java_test(
    name = "JdbcReconciliationDaoTest",
    srcs = ["JdbcReconciliationDaoTest.java"],
    test_class = "com.tm.services.server.dao.JdbcReconciliationDaoTest",
    deps = [
        "//com/tm/common/java/metric",
        "//com/tm/services/server/dao",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
