load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "ClaimHandlerImplTest",
    srcs = ["ClaimHandlerImplTest.java"],
    test_class = "com.tm.services.server.handler.ClaimHandlerImplTest",
    deps = [
        "//com/tm/common/java/kafka",
        "//com/tm/common/java/metric",
        "//com/tm/common/java/redis",
        "//com/tm/services/server/handler",
        "@maven//:io_github_resilience4j_resilience4j_circuitbreaker",
        "@maven//:io_github_resilience4j_resilience4j_ratelimiter",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_web",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)

java_test(
    name = "OpportunityHandlerImplTest",
    srcs = ["OpportunityHandlerImplTest.java"],
    test_class = "com.tm.services.server.handler.OpportunityHandlerImplTest",
    deps = [
        "//com/tm/common/java/metric",
        "//com/tm/services/server/dao",
        "//com/tm/services/server/handler",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_web",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
